# personafix

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  pages.yml  release.yml
apps/desktop/: index.html  package-lock.json  package.json  tailwind.config.js
apps/desktop/src/: App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  state.rs
apps/desktop/src/components/: AttributePanel.tsx  BuilderShell.tsx  ErrorBoundary.tsx  PriorityPanel.tsx  QualityPanel.tsx  SavedCharacterView.tsx  SkillPanel.tsx  SummaryBar.tsx
apps/desktop/src/store/: characterStore.ts  gameDataStore.ts
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/engine/: mod.rs  resolver.rs  stacker.rs  validator.rs
crates/core/src/ledger/: events.rs  mod.rs  projection.rs
crates/core/src/model/: attributes.rs  augmentations.rs  character.rs  contacts.rs  edition.rs  gear.rs  improvements.rs  magic.rs  mod.rs  priority.rs  qualities.rs  skills.rs  validation.rs
crates/core/src/rules/: mod.rs  sr4.rs  sr4_bp.rs  sr5.rs  sr5_priority.rs  traits.rs
crates/data/: Cargo.toml
crates/data/migrations/: 00001_initial_schema.sql
crates/data/src/: lib.rs  sqlite.rs
crates/migrate/: Cargo.toml
crates/migrate/src/: error.rs  main.rs
crates/migrate/src/db/: mod.rs
crates/migrate/src/xml/: mod.rs  sr4.rs  sr5.rs
docs/: _config.yml  index.md  shadowrun-manager-implementation-plan.docx
docs/_layouts/: default.html
