[workspace]
members = ["crates/core", "crates/data", "crates/migrate", "apps/desktop/src-tauri"]
resolver = "3"

[workspace.package]
version = "0.9.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hdmcbane/personafix"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = [
    "sqlite",
    "runtime-tokio",
    "migrate",
] }
tokio = { version = "1", features = ["full"] }

# XML parsing (migration)
quick-xml = { version = "0.39", features = ["serialize"] }

# Error handling
thiserror = "2.0"

# TypeScript type generation
ts-rs = "11"

# Internal crates
personafix-core = { path = "crates/core" }
personafix-data = { path = "crates/data" }
