[package]
name = "personafix-core"
description = "Pure rules engine for Shadowrun character management (SR4 + SR5)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ts-rs = { workspace = true }

[features]
default = []
wasm = []
