[package]
name = "personafix-data"
description = "Data repository layer for Shadowrun character manager (SQLite + Postgres)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
personafix-core = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
